--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Project 2 Repo",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   },
