--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "inquirer": "^6.5.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "sequelize": "^5.14.0",
